--- a/config/database.yml
+++ b/config/database.yml
@@ -17,19 +17,22 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: localhost
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: dynamic_surveys_development
+  database: survey_development
+  username: admin
+  password: password1
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: dynamic_surveys
+  #username: survey
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +60,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: dynamic_surveys_test
+  database: survey_test
+  username: admin
+  password: password1
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: dynamic_surveys_production
-  username: dynamic_surveys
-  password: <%= ENV['DYNAMIC_SURVEYS_DATABASE_PASSWORD'] %>
+  database: survey_production
+  username: survey
+  password: <%= ENV['SURVEY_DATABASE_PASSWORD'] %>
